--- a/pug/sub/general.pug
+++ b/pug/sub/general.pug
@@ -3,11 +3,10 @@ meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
 title 鳳山高中校友會
 link(rel="icon" href="img/fssh_logo.gif" type="image/x-icon")
 //General CSS
-//link(href="css/tocas.css" rel="stylesheet")
 link(href="css/NotoSansTC400ChineseTraditional.css" rel="stylesheet")
 link(href="css/all.css" rel="stylesheet")
-//link(href="css/bulma.min.css" rel="stylesheet")
 link(href="css/bulma.css" rel="stylesheet")
+link(href="css/main.css" rel="stylesheet")
 
 //General JavaScript
 script(src="js/jquery-3.4.1.js")
