--- a/pug/sub/menu.pug
+++ b/pug/sub/menu.pug
@@ -1,8 +1,8 @@
 //Menu
 nav.navbar.is-primary.is-fixed-top
     .navbar-brand
-        a.navbar-item(href="")
-            h1.title.is-4.has-text-white     鳳山高中校友會
+        a.navbar-item(href="index.html")
+            h1.title.is-4.has-text-white 鳳山高中校友會
         a.navbar-burger.burger(data-target="navbarMenu")
             span
             span
@@ -12,15 +12,15 @@ nav.navbar.is-primary.is-fixed-top
             .navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 關於我們
                 .navbar-dropdown
-                    a.navbar-item(href="#about") 簡介
-                    a.navbar-item(href="#chairman") 現任理事長
-                    a.navbar-item(href="#staff") 工作團隊
+                    a.navbar-item(href="index.html#about") 簡介
+                    a.navbar-item(href="index.html#chairman") 現任理事長
+                    a.navbar-item(href="index.html#staff") 工作團隊
             .navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 歷屆理監事
                 .navbar-dropdown
-                    a.navbar-item(href="") 第三屆(現任)
-                    a.navbar-item(href="") 第二屆
-                    a.navbar-item(href="") 第一屆
+                    a.navbar-item(href="his_staff.html#his_staff_3") 第三屆(現任)
+                    a.navbar-item(href="his_staff.html#his_staff_2") 第二屆
+                    a.navbar-item(href="his_staff.html#his_staff_1") 第一屆
             .navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 歷屆傑出校友
                 .navbar-dropdown
