--- a/pug/sub/menu.pug
+++ b/pug/sub/menu.pug
@@ -31,7 +31,8 @@ nav.navbar.is-primary.is-fixed-top
                 .navbar-dropdown
                     a.navbar-item(href="") 第二屆
                     a.navbar-item(href="") 第一屆
-            .navbar-item.has-dropdown.is-hoverable
+            a.navbar-item 活動花絮
+            //.navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 活動花絮
                 .navbar-dropdown
                     a.navbar-item(href="") 2019
