--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b6f5f5;
+    //background-color: #b6f5f5;
     font-family: 'Noto Sans TC', sans-serif;
 }
 .navbar-dropdown {
