--- a/pug/sub/menu.pug
+++ b/pug/sub/menu.pug
@@ -29,8 +29,8 @@ nav.navbar.is-primary.is-fixed-top
             .navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 歷屆大事紀
                 .navbar-dropdown
-                    a.navbar-item(href="") 第二屆
-                    a.navbar-item(href="") 第一屆
+                    a.navbar-item(href="his_event_2th.html") 第二屆
+                    a.navbar-item(href="his_event_1th.html") 第一屆
             a.navbar-item 活動花絮
             //.navbar-item.has-dropdown.is-hoverable
                 a.navbar-link 活動花絮
